<resources>
    <string name="app_name">Rate</string>
    <string name="hello">Hello</string>
    <string name="from">Your Julie</string>
    <string name="label_add1">+1 point</string>
    <string name="label_add2">+2 point</string>
    <string name="label_add3">+3 point</string>
    <string name="btn_reset_label">Reset</string>
    <string name="inp_tem">Input temperature</string>
    <string name="btn_convert1">Fahrenheit to Celsius</string>
    <string name="btn_convert2">Celsius to Fahrenheit</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="title_activity_rate_list">RateListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_open_list">OpenList</string>
    <string name="inp_search">请输入内容</string>
    <string name="btn_search">查找</string>
</resources>
